@@ -39,10 +39,13 @@ import java.util.stream.Collectors;
 class ListOpenJavaDevelopmentKits {
 
   /** Current General-Availability release number. */
-  static final String GA = System.getProperty("GA", "17");
+  static final String GA = System.getProperty("GA", "18");
+
+  /** Current Soon-Archived release number. */
+  static final String SA = System.getProperty("SA", "17");
 
   /** Early-Access Releases, as comma separated names. */
-  static final String EA = System.getProperty("EA", "19,18,loom,metropolis,panama,valhalla");
+  static final String EA = System.getProperty("EA", "19,loom,metropolis,panama,valhalla");
 
   /** Include archived releases flag. */
   static final boolean ARCHIVES = Boolean.getBoolean("ARCHIVES");
@@ -66,6 +69,7 @@ class ListOpenJavaDevelopmentKits {
   public static void main(String... args) {
     if (args.length == 0) {
       listGeneralAvailabilityRelease();
+      listSoonArchivedRelease();
       listEarlyAccessReleases();
       if (ARCHIVES) listArchivedReleases();
     } else {
@@ -94,6 +98,21 @@ class ListOpenJavaDevelopmentKits {
     return List.of(alias1, alias2);
   }
 
+  static void listSoonArchivedRelease() {
+    var html = browse("https://jdk.java.net/" + SA + "/");
+    var directs = parse(html);
+    print("Soon-Archived Release", directs);
+
+    var aliases = alias(directs, ListOpenJavaDevelopmentKits::generateSoonArchivedAliasKeys);
+    print("Soon-Archived Release (Alias)", aliases);
+  }
+
+  static List<String> generateSoonArchivedAliasKeys(String[] components) {
+    components[1] = "latest";
+    var alias1 = String.join(",", components);
+    return List.of(alias1);
+  }
+
   static void listEarlyAccessReleases() {
     var names = List.of(EA.split(","));
     if (names.isEmpty()) return;
@@ -113,7 +132,10 @@ class ListOpenJavaDevelopmentKits {
     var release = components[0];
     var version = components[1];
     try {
-      var project = version.substring(version.indexOf('-') + 1, version.indexOf('+'));
+      // extract named project or take version as-is
+      var from = version.indexOf('-');
+      var till = version.indexOf('+');
+      var project = from >= 0 && from < till ? version.substring(from + 1, till) : version;
       components[0] = project;
       components[1] = "latest";
       var alias = String.join(",", components);
@@ -137,6 +159,7 @@ class ListOpenJavaDevelopmentKits {
 
   static List<String> generateArchivedAliasKeys(String[] components) {
     if (components[0].equals(GA)) return List.of(); // "latest" is covered by GA
+    if (components[0].equals(SA)) return List.of(); // "latest" is covered by SA
     components[1] = "latest";
     var alias = String.join(",", components);
     return List.of(alias);
@@ -154,7 +177,7 @@ class ListOpenJavaDevelopmentKits {
   static TreeMap<String, String> parse(String html) {
     var map = new TreeMap<String, String>();
 
-    for (var line : html.lines().collect(Collectors.toList())) {
+    for (var line : html.lines().toList()) {
       var uriMatcher = URI_PATTERN.matcher(line);
       if (uriMatcher.matches()) {
         var uri = uriMatcher.group(1);
